--- a/ribbon/css/styles.css
+++ b/ribbon/css/styles.css
@@ -7,7 +7,7 @@
     --chat-align: row;
     --message-gap-bottom: 20px;
     --name-background-color: #8b0000; /* Dunkelrot für Namen */
-    --message-background-color: #deb887; /* Hellbraun für Nachrichtenhintergrund */
+    --message-background-color: rgba(201, 223, 190, 0.8); /* 0,8 = 80% Transparenz lässt sich bisschen mit rumspielen*/
     --badge-size: 15px;
     --badge-spacing: 2px;
     --emote-size: 16px;
@@ -34,8 +34,8 @@
 }
 
 #chat li {
-    background-color: transparent;
-    margin-bottom: 15px !important; /* Abstand zwischen den Nachrichten */
+    background-color: transparent,;
+    margin-bottom: auto !important; /* Abstand zwischen den Nachrichten */
 }
 .msg {
     display: flex;
@@ -96,7 +96,7 @@
   padding-left: 100px;
   padding-right: 100px;
   align-items: center;
-  max-width: 100%:
+  max-width: 100%;
   word-wrap: break-word;
 }
 
@@ -141,5 +141,5 @@
 }
 
 ;
-}
+
 
