--- a/ribbon/css/styles.css
+++ b/ribbon/css/styles.css
@@ -7,7 +7,6 @@
     --chat-align: row;
     --message-gap-bottom: 20px;
     --name-background-color: #8b0000; /* Dunkelrot für Namen */
-    --message-background-color: rgba(201, 223, 190, 0.8); /* 0,8 = 80% Transparenz lässt sich bisschen mit rumspielen*/
     --badge-size: 15px;
     --badge-spacing: 2px;
     --emote-size: 16px;
@@ -35,7 +34,7 @@
 
 #chat li {
     background-color: transparent,;
-    margin-bottom: auto !important; /* Abstand zwischen den Nachrichten */
+    margin-bottom: 15px !important; /* Abstand zwischen den Nachrichten */
 }
 .msg {
     display: flex;
@@ -133,7 +132,7 @@
   transform: translate(-50%, 5%);
   width: 300px;  /* Breite bleibt fixiert */
   height: auto;  /* Höhe passt sich dem Inhalt an */
-  background-color: #E5D7ED;
+  background-color: rgba(229, 215, 237, 0.8); /* 0,8 = 80% Transparenz lässt sich bisschen mit rumspielen*/;
   border-radius: 25px;
   z-index: 0;  /* Sicherstellen, dass die Box hinter dem Ribbon bleibt */
   word-wrap: break-word; /* Erlaubt das Umbrechen von langen Wörtern */
